--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "jquery": "^3.4.1",
     "mongoose": "^5.6.2",
     "morgan": "^1.9.1",
     "path": "^0.12.7"
