--- a/package.json
+++ b/package.json
@@ -23,5 +23,12 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.6.4",
     "react-router-dom": "^5.0.1"
-  }
+  },
+  "start": "if-env NODE_ENV=production && yarn start:prod || yarn start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"yarn client\"",
+    "client": "cd client && yarn start",
+    "install": "cd client && yarn install",
+    "build": "cd client && yarn build",
+    "heroku-postbuild": "yarn build"
 }
