--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "proxy": "http://localhost:8080/",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "dotenv": "^8.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "reactstrap": "^8.0.1"
   },
