--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
+  "production": {
+    "use_env_variable": "DATABASE_URL"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CaptainHdz/book-finder.git"
